...
                                            <userDefinedRuntimeAttribute type="color" keyPath="selectedTitleColor">
                                                <color key="value" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                            </userDefinedRuntimeAttribute>
                                            <userDefinedRuntimeAttribute type="color" keyPath="selectedLineColor">
                                                <color key="value" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                            </userDefinedRuntimeAttribute>
                                            <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="Password"/>
                                            <userDefinedRuntimeAttribute type="string" keyPath="title" value="Password"/>
                                        </userDefinedRuntimeAttributes>
                                    </textField>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The username/password is incorrect. Please check your spelling." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskInto
                                        <rect key="frame" x="8" y="276" width="314" height="29"/>
                                        <constraints>
...
                                        <rect key="frame" x="8" y="333" width="314" height="50"/>
                                        <color key="backgroundColor" red="1" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="CTT-TB-JYS"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                        <state key="normal" title="LOG IN">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                <real key="value" value="5"/>
                                            </userDefinedRuntimeAttribute>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="rXz-aA-11j" id="ZLZ-6c-Df8"/>
                            <outlet property="delegate" destination="rXz-aA-11j" id="U8a-jW-ELB"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Homework" id="2Cr-mv-nvG"/>
                    <connections>
                        <outlet property="homeworkTable" destination="FPY-tO-elr" id="Vn2-lX-4d8"/>
                    </connections>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="XkO-se-khE" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
...
            </objects>
            <point key="canvasLocation" x="8284" y="827"/>
        </scene>
        <!--Course List-->
        <scene sceneID="BuE-oZ-M9F">
            <objects>
                <viewController storyboardIdentifier="courseList" title="Course List" automaticallyAdjustsScrollViewInsets="NO" id="0RJ-yP-WMX" customClass="classListController" customModule="MFS_Mobile" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="H3v-0I-48l"/>
                        <viewControllerLayoutGuide type="bottom" id="Zxt-55-9mI"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="0ij-qO-CCd">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
            </objects>
            <point key="canvasLocation" x="6081" y="958"/>
        </scene>
        <!--Me-->
        <scene sceneID="kSK-pV-7Ke">
            <objects>
                <collectionViewController storyboardIdentifier="more" title="Me" id="Q0f-l8-tfz" customClass="NewMoreViewController" customModule="MFS_Mobile" customModuleProvider="target" sceneMemberID="viewController">
                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsVerticalScrollIndicator="NO" dataMode="prototypes" id="xJu-be-hzF">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" red="0.95686274509803915" green="0.95686274509803915" blue="0.95686274509803915" alpha="1" colorSpace="calibratedRGB"/>
                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="2" minimumInteritemSpacing="1" id="OdE-Cj-6ZL">
                            <size key="itemSize" width="375" height="142"/>
...
            <point key="canvasLocation" x="3717.3913043478265" y="960.32608695652186"/>
        </scene>
        <!--Calendar-->
        <scene sceneID="90T-Fs-8NC">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="rt2-9L-AaP" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Calendar" image="CalendarUnselected" selectedImage="Calendar" id="Ga6-gg-IQU">
                        <inset key="imageInsets" minX="0.0" minY="3" maxX="0.0" maxY="-3"/>
                    </tabBarItem>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" translucent="NO" id="TBw-gR-HsH">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
...
            <point key="canvasLocation" x="6496.8000000000002" y="133.5832083958021"/>
        </scene>
        <!--Timetable-->
        <scene sceneID="i2X-G5-YHe">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="VRo-TY-UmQ" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Timetable" image="Timetable" selectedImage="TimetableSelected" id="4oN-GM-rFw">
                        <inset key="imageInsets" minX="0.0" minY="3" maxX="0.0" maxY="-3"/>
                    </tabBarItem>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="PmC-os-GLY">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
...
