...
import M13ProgressSuite
//import ChatSDK
import SCLAlertView

class NewMoreViewController: UICollectionViewController  {
    var contentList = [String]()
    let myCourses = NSLocalizedString("My Courses", comment: "")
    let lunchMenu = NSLocalizedString("Lunch Menu", comment: "")
    let serviceHourS = NSLocalizedString("Service Hour", comment: "")
    let logout = NSLocalizedString("Logout", comment: "")
    let about = NSLocalizedString("About", comment: "")
    let settings = NSLocalizedString("Settings", comment: "")
    let stepChallenge = NSLocalizedString("Step Challenge", comment: "")
...
