//
//  MFSCalendarUITests.swift
//  MFSCalendarUITests
//
//  Created by David Dai on 9/21/17.
//  Copyright © 2017 David. All rights reserved.
//

import XCTest

class MFSCalendarUITests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        let app = XCUIApplication()
        app.launchArguments = ["--Reset"]
        app.launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testExample() {
        let app = XCUIApplication()
        let passwordSecureTextField = app.secureTextFields["Password"]
        passwordSecureTextField.tap()
        passwordSecureTextField.typeText("torsan89")
        app.buttons["LOG IN"].tap()
        
        let tabBarsQuery = app.tabBars
        tabBarsQuery.buttons["Homework"].tap()
        tabBarsQuery.buttons["Calendar"].tap()
        tabBarsQuery.buttons["Timetable"].tap()
        app.navigationBars["MFSCalendar.timeTableParentView"]/*@START_MENU_TOKEN@*/.buttons["F Day"]/*[[".staticTexts.buttons[\"F Day\"]",".buttons[\"F Day\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        tabBarsQuery.buttons["More"].tap()
        app.tables/*@START_MENU_TOKEN@*/.staticTexts["My Courses"]/*[[".cells.staticTexts[\"My Courses\"]",".staticTexts[\"My Courses\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app.navigationBars["Course List"].buttons["Me"].tap()
        
        
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }
    
}
